--- a/style.css
+++ b/style.css
@@ -11,6 +11,58 @@ h1.intro {
     font-size:500%;
 }
 
+#secret_page {
+    background-color:rgb(254, 226, 255);
+}
+
+#secret_page div {
+    display:grid;
+    grid-template-columns:250px 1fr; 
+}
+
+#secret_page ul {
+    list-style:none;
+    padding:0;
+    padding-top:30px;
+    border-right:10px solid white;
+    font-size:30px;
+    line-height: 2;
+    color:mediumslateblue;
+}
+
+#secret_page li {
+    text-align:center;
+    padding-bottom:20px;
+    font-weight: bold;
+    font-size:20px;
+    color:black;
+}
+
+#secret_page a {
+    color: white;    
+}
+
+div.pagelist{
+    display:grid;
+    grid-template-columns:250px 1fr; 
+}
+
+div.pagelist ul {
+    list-style:none;
+    padding:0;
+    padding-top:30px;
+    border-right:10px solid gainsboro;
+    font-size:30px;
+    color:red;
+}
+
+div.pagelist li {
+    text-align:center;
+    padding-bottom:30px;
+    font-size:20px;
+    color:black;
+}
+
 div.intro {
     display:grid;
     grid-template-columns:250px 1fr;
@@ -33,6 +85,15 @@ div.intro li {
     font-size:20px;
 }
 
+a {
+    color:gray;
+    text-decoration-line:none;
+}
+
+#secretLink {
+    color:white;
+}
+
 div.intro a {
     color:gray;
     text-decoration-line:none;
@@ -45,6 +106,13 @@ div.intro p {
 
 div.intro img {
     width:100%;
+}
+
+.Home {
+    position:fixed;
+    bottom: 16px;
+    right: 8px;
+    margin-right: 30px;
 }
 
 
